--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="clock-wrapper">
-      <input type="text" id="search1" class="search-bar" placeholder="Search for a country or city" autocomplete="off">
+      <input type="text" id="search1" class="search-bar" placeholder="Search for a city..." autocomplete="off">
       <div class="container">
         <div class="clock">
           <div id="hour1" class="hand hour-hand">
@@ -40,7 +40,7 @@
     </div>
 
     <div class="clock-wrapper">
-      <input type="text" id="search2" class="search-bar" placeholder="Search for a country or city" autocomplete="off">
+      <input type="text" id="search2" class="search-bar" placeholder="Search for a city..." autocomplete="off">
       <div class="container">
         <div class="clock">
           <div id="hour2" class="hand hour-hand">
@@ -70,7 +70,7 @@
     </div>
 
     <div class="clock-wrapper">
-      <input type="text" id="search3" class="search-bar" placeholder="Search for a country or city" autocomplete="off">
+      <input type="text" id="search3" class="search-bar" placeholder="Search for a city..." autocomplete="off">
       <div class="container">
         <div class="clock">
           <div id="hour3" class="hand hour-hand">
