--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/29186d169c.js" crossorigin="anonymous"></script>
     <link rel="icon" href="assets/clock-face.png">
     <link rel="stylesheet" href="css/style.css"/>
     <title>Analog Clock</title>
   </head>
   <body>
+    <label for="light-mode-toggle" id="light-mode-toggle">
+      <i class="fa-solid fa-moon"></i>
+  </label>
+
     <div class="clock-wrapper">
       <input type="text" id="search1" class="search-bar" placeholder="Search for a city..." autocomplete="off">
       <div class="container">
