--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/29186d169c.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="assets/clock-face.png">
+    <link rel="icon" href="assets/clockicon.jpg">
     <link rel="stylesheet" href="css/style.css"/>
     <title>Analog Clock</title>
   </head>
