--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 </head>
 
 <body>
-  <label for="light-mode-toggle" id="light-mode-toggle">
+  <label id="light-mode-toggle">
     <i class="fa-solid fa-moon"></i>
   </label>
+
+  <button id="scroll-top" class="scroll-button"><i class="fas fa-angle-up"></i></button>
+  <button id="scroll-bottom" class="scroll-button"><i class="fas fa-angle-down"></i></button>
 
   <div class="clock-wrapper">
     <input type="text" id="search1" class="search-bar" placeholder="Search for a city..." autocomplete="off">
