--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <p class="toptext">If something is not working, please reload the page.</p>
   <label id="light-mode-toggle">
     <i class="fa-solid fa-moon"></i>
   </label>
