add clock, search by city added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <button id="scroll-top" class="scroll-button"><i class="fas fa-angle-up"></i></button>
   <button id="scroll-bottom" class="scroll-button"><i class="fas fa-angle-down"></i></button>
 
+  <button id="remove-clock" class="action-button"><i class="fas fa-minus"></i></button>
+
   <div class="clock-wrapper">
     <input type="text" id="search1" class="search-bar" placeholder="Search for a city..." autocomplete="off">
     <div class="container">
@@ -109,6 +111,8 @@
     </div>
     <div id="location3" class="location"></div>
   </div>
+
+  <button id="add-clock" class="action-button"><i class="fas fa-plus"></i></button>
 
   <script src="js/script.js"></script>
 </body>
